--- a/style.css
+++ b/style.css
@@ -38,3 +38,10 @@
 .verde{
     color: green;
 }
+
+h1{
+    text-transform: uppercase;
+    font-size: 70px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
