--- a/style.css
+++ b/style.css
@@ -17,6 +17,27 @@
     transform: translate(-50%, -50%);
 }
 
+h1{
+    text-transform: uppercase;
+    font-size: 70px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+a{
+    text-decoration: none;
+    color: grey;
+    background-color: honeydew;
+    border-radius: 50%;
+}
+
+.nav{
+    display: inline-block;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
+
 /* colori */
 
 .rosso{
@@ -39,9 +60,3 @@
     color: green;
 }
 
-h1{
-    text-transform: uppercase;
-    font-size: 70px;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-}
